--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@
            <h3 style="font-family: sans-serif; ">Stay Connected</h3>
            <tr>
             <td style="
+                  display: flex;
+                  justify-content: center;
+                  flex-wrap: wrap;
+                  flex-direction: row;
+                  row-gap: .5rem;
                   background-color: #ffffff;
                   padding: 0px 20px;
                   text-align: center;">
@@ -278,7 +283,8 @@
               padding: 8px 20px;
               border-radius: 5px;
               font-family:sans-serif; 
-              font-weight:600;"
+              font-weight:600;
+              margin-right: 5px;"
                href="https://www.facebook.com/wundermanthompsondhaka" alt="">Facebook</a>
               <a style="
               text-decoration: none; 
@@ -287,7 +293,8 @@
               padding: 8px 20px;
               border-radius: 5px;
               font-family:sans-serif; 
-              font-weight:600;"
+              font-weight:600;
+              margin-right: 5px;"
                href="https://www.youtube.com/channel/UCUr7WswXcxfLJ2PKLW67HHw/videos" alt="">Youtube</a>
               <a style="
               text-decoration: none; 
@@ -296,7 +303,8 @@
               padding: 8px 20px;
               border-radius: 5px; 
               font-family:sans-serif; 
-              font-weight:600;" 
+              font-weight:600;
+              margin-right: 5px;" 
               href="https://twitter.com/wunthompson_dha" alt="">Twitter</a>
               <a style="
               text-decoration: none; 
